# deepwiki-open

api/: api.py  claude_code_client.py  config.py  data_pipeline.py  pyproject.toml  simple_chat.py  websocket_wiki.py
api/config/: generator.json
corpus/distaff/: MANIFEST.md
scripts/: courtesy-sweep.sh  export_wiki_to_markdown.py  generate_auto_doc_wiki.py  generate_bender_wiki.py  generate_cope_data_adapter_wiki.py  generate_cope_tools_wiki.py  generate_deepreason_wiki.py  generate_deepwiki_open_self_wiki.py  generate_diderot_wiki.py  generate_distaff_wiki.py  generate_example_generator_wiki.py  generate_gepa_eval_wiki.py  generate_jacques_core_hooks_wiki.py  generate_jacques_core_system_wiki.py  generate_js_pipeline_wiki.py  generate_light_system_validator_wiki.py  generate_openwiki_wiki.py  generate_superhuman_cli_wiki.py  generate_wiki.py
src/app/[owner]/[repo]/: page.tsx
tests/unit/: test_claude_code_client.py  test_clean_directory_token.py  test_get_local_files_context.py  test_resolve_local_repo_structure.py
