[project]
name = "open-deepwiki-api"
version = "1.0.0"
description = "Backend API for DeepWiki, providing smart code analysis and AI-powered documentation generation."
license = {text = "MIT License"}

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Ceiling added (Slice 2, 2026-07-04): fastapi 0.13x dropped Starlette's `add_websocket_route`, which
# api/api.py:401 still calls directly. Pre-existing upstream drift (unrelated to the Claude Code provider)
# that broke a fresh install as of today — confirmed by reproducing the crash on a clean venv with the
# previous unbounded ">=0.95.0" floor. Pinned to the newest version confirmed to still expose the method.
fastapi = ">=0.95.0,<0.116.0"
uvicorn = { extras = ["standard"], version = ">=0.21.1" }
pydantic = ">=2.0.0"
google-generativeai = ">=0.3.0"
tiktoken = ">=0.5.0"
adalflow = ">=0.1.0"
numpy = ">=1.24.0"
faiss-cpu = ">=1.7.4"
langid = ">=1.1.6"
requests = ">=2.28.0"
jinja2 = ">=3.1.2"
python-dotenv = ">=1.0.0"
openai = ">=1.76.2"
ollama = ">=0.4.8"
aiohttp = ">=3.8.4"
boto3 = ">=1.34.0"
websockets = ">=11.0.3"
azure-identity = ">=1.12.0"
azure-core = ">=1.24.0"
anyio = ">=4.0.0"
claude-agent-sdk = ">=0.2.82"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
